variables.Variables.scala.code
var nbPas = 0
var dejaFait = 0

while(!estSurBiscuit()){
  avance()
  nbPas = nbPas + 1
}

prendBiscuit()

while(dejaFait != nbPAS){
  recule()
  dejaFait = dejaFait + 1
}

poseBiscuit()